[package]
name = "roblang"
version = "0.0.1"
edition = "2021"
description = "Compiler, grammar, and some files for the roblang programming language."
readme = "README.md"
documentation = "docs.md"
repository = "https://github.com/Robert4S/roblang.git"
exclude = ["target", ".git", "prog", "prog.rob", "out.c"]
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
